--- a/src/Components/Home/Contact/Contact.css
+++ b/src/Components/Home/Contact/Contact.css
@@ -1,41 +1,29 @@
-/* body{
-    background-color: #25274d;
-} */
 .contact{
     padding: 5%;
     height: 400px;
 }
 .col-md-3{
-    background: #ff9b00;
+    background: #ffb23f;
     padding: 2%;
-    /* border-top-left-radius: 0.5rem; */
-    /* border-bottom-left-radius: 0.5rem; */
 }
-/* .contact-info{
-    margin-top:10%;
-} */
-/* .contact-info img{
-    margin-bottom: 5%;
-} */
+
 .contact-info h2{
     margin-bottom: 10%;
 }
 .col-md-9{
     background: #fff;
     padding: 3%;
-    /* border: 100px; */
-    /* border-top-right-radius: 0.5rem; */
-    /* border-bottom-right-radius: 0.5rem; */
+   
 }
-/* .contact-form label{
-    font-weight:600;
-} */
+
 .contact-form button{
     background: #25274d;
     color: #fff;
     font-weight: 600;
     width: 25%;
 }
-/* .contact-form button:focus{
-    box-shadow:none;
-} */
+
+.contactTitle{
+    color: white;
+    font-family: 'Dela Gothic One', cursive;
+}
